Remove unused apis
