# torrent/src/http/http_stream.go
@@ -3,6 +3,8 @@ package http
 import (
 	"net/http"
 
+	"github.com/go-chi/render"
+
 	"torrent/torrent"
 )
 
@@ -18,14 +20,14 @@ func (s *Server) StreamFile(w http.ResponseWriter, r *http.Request, infoHash Inf
 	}
 }
 
-func (s *Server) StreamVideoFile(w http.ResponseWriter, r *http.Request, infoHash InfoHash, fileIndex FileIndex, fileName FileName) {
-	infoH, err := torrent.InfoHashFromString(infoHash)
+func (s *Server) GetTorrentStats(w http.ResponseWriter, r *http.Request, infoHash InfoHash, fileIndex FileIndex) {
+	ih, err := torrent.InfoHashFromString(infoHash)
 	if err != nil {
 		respondError(w, r, err, http.StatusBadRequest)
 		return
 	}
-	if err := s.torManager.StreamVideoFile(w, r, infoH, fileIndex); err != nil {
-		respondError(w, r, err, http.StatusInternalServerError)
-		return
-	}
+
+	stats := s.torManager.Stats(ih, fileIndex)
+
+	render.Respond(w, r, toHTTPStats(stats))
 }
